added binocular and fixed early game difficulty

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </button>
                     <button id="upgrade-multishot" class="upgrade-category" data-category="multishot">
                         <div class="upgrade-button-content">
-                            <div class="upgrade-name">Multishot</div>
+                            <div class="upgrade-name">Binocular</div>
                             <div class="upgrade-price">$500</div>
                         </div>
                     </button>
