--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                             <div class="upgrade-price">$500</div>
                         </div>
                     </button>
+                    <button id="upgrade-knockback" class="upgrade-category" data-category="knockback">
+                        <div class="upgrade-button-content">
+                            <div class="upgrade-name">Force</div>
+                            <div class="upgrade-price">$100</div>
+                        </div>
+                    </button>
                 </div>
                 
                 <!-- Heal System -->
