Updated ReadMe, Added piercing

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                             <div class="upgrade-price">$150</div>
                         </div>
                     </button>
+                    <button id="upgrade-pierce" class="upgrade-category" data-category="pierce">
+                        <div class="upgrade-button-content">
+                            <div class="upgrade-name">Pierce</div>
+                            <div class="upgrade-price">$200</div>
+                        </div>
+                    </button>
                 </div>
                 
                 <!-- Heal System -->
