--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tower Defense Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,6 +24,11 @@
                 <div class="checkbox-container">
                     <input type="checkbox" id="auto-start" />
                     <label for="auto-start">Auto Start Rounds</label>
+                </div>
+                
+                <!-- Heal System -->
+                <div class="heal-section">
+                    <button id="heal-base">Heal Base ($50)</button>
                 </div>
             </div>
         </div>
@@ -86,11 +91,6 @@
                             <div class="upgrade-price">$200</div>
                         </div>
                     </button>
-                </div>
-                
-                <!-- Heal System -->
-                <div class="heal-section">
-                    <button id="heal-base">Heal Base ($50)</button>
                 </div>
             </div>
         </div>
