updated colour system enemy spawn and health cost scaling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
                 <!-- Heal System -->
                 <div class="heal-section">
-                    <button id="heal-base">Heal Base ($50)</button>
+                    <button id="heal-base">Heal Base</button>
                 </div>
             </div>
         </div>
